--- a/new website/index.html
+++ b/new website/index.html
@@ -71,7 +71,7 @@
 
 <div class="container">
     <div class="content">
-        <h1>        WELCOME TO THE SHITTIETS STUFF IN HERE</h1>
+        <h1>        WE'RE A ONE-MAN ORGANIZAITION THAT WILL FIGHT THIS PROBLEM, SO CONSIDERED SHARING THIS TO SAVE THE WORLD</h1>
     
     </div>
     <div class="parallax"><p>
@@ -99,41 +99,23 @@
               Wht should I do?                <span class="faq-plus">&DownArrow;</span>
             </h3>
             <div class="faq-body">
-              Tbh, I don't know, but scientists said we have to convert to electirc cars, use more renewable energies, and 
+              Tbh, I don't know, but scientists said we have to convert to electirc cars, use more renewable energies, and the most important is to spread these knowledges
             </div>
           </div>
           <hr>
           <div class="faq-item">
             <h3>
-              What is an FAQ page ?
+              What about this web?
               <span class="faq-plus">&DownArrow;</span>
             </h3>
             <div class="faq-body">
-              Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+              It requires people attention, so you may want to consider sharing this.
             </div>
           </div>
-          <hr>
-          <div class="faq-item">
-            <h3>
-              What is an FAQ page ?
-              <span class="faq-plus">&DownArrow;</span>
-            </h3>
-            <div class="faq-body">
-              Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-            </div>
-          </div>
-          <hr>
-          <!-- <div class="faq-item">
-            <h3>
-              What is an FAQ page ?
-              <span class="faq-plus">&DownArrow;</span>
-            </h3>
-            <div class="faq-body">
-              Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-            </div>
-          </div> -->
         </div>
       </div>
+
+  </div>
 
   </div>
   <script src="script.js"></script></div>
